The code for task1

--- a/InterviewTest/InterviewTest.csproj
+++ b/InterviewTest/InterviewTest.csproj
@@ -149,19 +149,21 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\AccountViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\IContent.cs" />
     <Compile Include="Services\TripService.cs" />
     <Compile Include="Services\HostService.cs" />
     <Compile Include="Services\ITripService.cs" />
     <Compile Include="Services\IHostService.cs" />
     <Compile Include="Controllers\NewsletterController.cs" />
     <Compile Include="Models\Host.cs" />
+    <Compile Include="ViewModels\INewsletterItem.cs" />
     <Compile Include="ViewModels\NewsletterHostViewModel.cs" />
     <Compile Include="ViewModels\NewsletterListViewModel.cs" />
     <Compile Include="ViewModels\NewsletterTripViewModel.cs" />
     <Compile Include="ViewModels\NewsletterViewModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Database\FileSystemDatabase.cs" />
-    <Compile Include="Database\IFileSystemDatabase.cs" />
+    <Compile Include="Database\IDatabase.cs" />
     <Compile Include="Database\IPersistable.cs" />
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Global.asax.cs">
