--- a/InterviewTest/InterviewTest.csproj
+++ b/InterviewTest/InterviewTest.csproj
@@ -129,6 +129,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityGenerator.cs" />
+    <Compile Include="Models\ItemCollection.cs" />
+    <Compile Include="Models\Items.cs" />
+    <Compile Include="Models\splitsText.cs" />
+    <Compile Include="Models\splits.cs" />
     <Compile Include="Models\Newsletter.cs" />
     <Compile Include="Models\Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
